syntax = "proto3";

package room;

option go_package = "github.com/ppeymann/Planora.git/proto/room;roompb";

import "google/protobuf/timestamp.proto";

service RoomService {
  rpc Create(CreateRoomRequest) returns (Room);
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
  rpc GetRoom(GetRoomRequest) returns (GetRoomResponse);
  rpc AddUser(AddUserRequest) returns (Room);
}

message BaseModel {
  uint64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updatede_at = 3;
  google.protobuf.Timestamp deleted_at = 4;
}

message CreateRoomRequest {
  string name = 1;
  uint64 creator_id = 2;
}

message Room {
  BaseModel model = 1;
  string name = 2;
  uint64 creator_id = 3;
  repeated uint64 user_ids = 4;
  repeated uint64 todo_ids = 5;
}

message GetUsersRequest { uint64 room_id = 1; }

message GetUsersResponse { repeated uint64 user_ids = 1; }

message GetRoomRequest {
  uint64 room_id = 1;
  uint64 creator_id = 2;
}

message GetRoomResponse { Room room = 1; }

message AddUserRequest {
  string username = 1;
  uint64 creator_id = 2;
  uint64 room_id = 3;
  uint64 user_id = 4;
}