syntax = "proto3";

package todo;

option go_package = "github.com/ppeymann/Planora.git/proto/todo;todopb";

import "google/protobuf/timestamp.proto";

service TodoService {
  rpc AddTodo(AddTodoRequest) returns (Todo);
  rpc UpdateTodo(UpdateTodoRequest) returns (Todo);
  rpc GetAllTodo(GetAllTodoRequest) returns (GetAllTodoResponse);
  rpc ChangeStatus(ChangeStatusRequest) returns (Todo);
  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse);
  rpc GetRoomTodos(RoomTodosRequest) returns (RoomTodosResponse);
}

message BaseModel {
  uint64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updatede_at = 3;
  google.protobuf.Timestamp deleted_at = 4;
}

message Todo {
  BaseModel model = 1;
  string title = 2;
  string description = 3;
  string status = 4;
  uint64 user_id = 5;
  uint64 room_id = 6;
}

message AddTodoRequest {
  string title = 1;
  string description = 2;
  uint64 user_id = 3;
  uint64 room_id = 4;
}

message UpdateTodoRequest {
  AddTodoRequest todo = 1;
  uint64 id = 2;
}

message GetAllTodoRequest { uint64 user_id = 1; }

message GetAllTodoResponse { repeated Todo todos = 1; }

message ChangeStatusRequest {
  string status = 1;
  uint64 id = 2;
  uint64 user_id = 3;
}

message DeleteTodoRequest {
  uint64 id = 1;
  uint64 user_id = 2;
}

message DeleteTodoResponse { uint64 id = 1; }

message RoomTodosRequest { uint64 room_id = 1; }

message RoomTodosResponse { repeated Todo todos = 1; }